--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,21 @@
       The build step will place the bundled scripts into the <body> tag.
 
       To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+			To create a production bundle, use `npm run build` or `yarn build`. -->
+			<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" async></script>
+			<script>
+				window.addEventListener('load', () => {
+					const googleTranslateElementInit = () => {
+    new window.google.translate.TranslateElement(
+      {
+        pageLanguage: "en",
+        autoDisplay: false
+      },
+      "google_translate_element"
+    );
+  };
+					window.googleTranslateElementInit = googleTranslateElementInit;
+				});
+			</script>
   </body>
 </html>
